--- a/lesson-game/src/style.css
+++ b/lesson-game/src/style.css
@@ -17,3 +17,26 @@
   margin-bottom: -1px;
   text-align: center;
 }
+.game {
+  display: flex;
+}
+.game-board {
+  width: 200px;
+}
+.game-history {
+  flex: 1;
+}
+.history-title {
+  margin: 0;
+  font-weight: normal;
+  font-size: 16px;
+}
+.history-list {
+  margin: 0;
+  padding: 0;
+}
+.history-item {
+  margin-top: 5px;
+  font-size: 12px;
+  cursor: pointer;
+}
