--- a/happy-shopping-app/src/containers/Guide/style.scss
+++ b/happy-shopping-app/src/containers/Guide/style.scss
@@ -17,7 +17,7 @@
   .guide-title {
     font-size: 0.2rem;
     line-height: 0.23rem;
-    letter-spacing: 0px;
+    letter-spacing: 0rem;
     text-align: center;
     color: #242424;
   }
